--- a/_posts/2020-01-04-NUTEE-iOS.md
+++ b/_posts/2020-01-04-NUTEE-iOS.md
@@ -17,13 +17,13 @@ tags: 2020
 앱 아이콘
 ------------
 
-<img src="IMG/NUTEE.png" width="300">
+<img src="https://github.com/team-nutee/NUTEE-iOS/IMG/NUTEE.png" width="300">
 
 
 
 스크린 샷
 ------------
-<img src="IMG/1.jpg" width="300"><img src="IMG/2.jpg" width="300"><img src="IMG/3.jpg" width="300"><img src="IMG/4.jpg" width="300"><img src="IMG/5.jpg" width="300"><img src="IMG/6.jpg" width="300">
+<img src="https://github.com/team-nutee/NUTEE-iOS/IMG/1.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/2.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/3.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/4.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/5.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/6.jpg" width="300">
 
 
 
