--- a/_posts/2020-01-04-NUTEE-iOS.md
+++ b/_posts/2020-01-04-NUTEE-iOS.md
@@ -17,13 +17,13 @@ tags: 2020
 앱 아이콘
 ------------
 
-<img src="https://github.com/team-nutee/NUTEE-iOS/IMG/NUTEE.png" width="300">
+<img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/NUTEE.png?raw=true" width="300">
 
 
 
 스크린 샷
 ------------
-<img src="https://github.com/team-nutee/NUTEE-iOS/IMG/1.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/2.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/3.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/4.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/5.jpg" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/IMG/6.jpg" width="300">
+<img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/1.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/2.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/3.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/4.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/5.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/6.jpg?raw=true" width="300">
 
 
 
