--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -26,14 +26,14 @@ tags: tag1
 ------------
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/splash.png?raw=true" width="300">
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/splash2.png?raw=true" width="300">
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed.png?raw=true" width="300">
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed2.png?raw=true" width="300"> 
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed3.png?raw=true" width="300"> 
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/mypage.png?raw=true" width="300"> 
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/mypage2.png?raw=true" width="300"> 
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postView.png?raw=true" width="300">
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postSetting.png?raw=true" width="300">
- <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postCategory.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed2.png?raw=true" width="300"> 
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed3.png?raw=true" width="300"> 
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/mypage.png?raw=true" width="300"> 
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/mypage2.png?raw=true" width="300"> 
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postView.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postSetting.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postCategory.png?raw=true" width="300">
 
 개발 환경
 ------------
@@ -51,16 +51,16 @@ tags: tag1
 
 기능 소개
 ------------
-|  <center>기능</center> |  <center>개발 여부</center> |  <center> 기타 사항 </center> | <center> 담당 </center> |
+| 기능</center> | 개발 여부</center> |  기타 사항  | 담당  |
 |:--------:|:--------:|:--------:|:--------:|
-|<center> 로그인/회원가입 </center> | <center> x </center> |<center> 2순위 </center>|<center> - </center>|
-|<center> 뉴스피드 </center> | <center> ○ </center> |<center> 1순위 </center> |<center> 현지 </center>|
-|<center> 뉴스피드 세부 뷰 </center> | <center> △ </center> |<center> 1순위 </center> |<center> 현지 </center>|
-|<center> 뉴스피드 카테고리 분류 </center> | <center> △ </center> |<center> 1순위 </center> |<center> 현지 </center>|
-|<center> 기업정보 </center> | <center> x </center> |<center> 2순위 </center> |<center> - </center>|
-|<center> 게시글 작성 </center> | <center> ○ </center> |<center> 1순위 </center> |<center> 준현 </center>|
-|<center> 알림 </center> | <center> x </center> |<center> 3순위 </center> |<center> - </center>|
-|<center> 마이페이지 </center> | <center> △ </center> |<center> 2순위 </center> |<center> 준현 </center>|
+|   로그인/회원가입  | x  |   2순위 |   - |
+|   뉴스피드  | ○  |   1순위  |   현지 |
+|   뉴스피드 세부 뷰  | △  |   1순위  |   현지 |
+|   뉴스피드 카테고리 분류  | △  |   1순위  |   현지 |
+|   기업정보  | x  |   2순위  |   - |
+|   게시글 작성  | ○  |   1순위  |   준현 |
+|   알림  | x  |   3순위  |   - |
+|   마이페이지  | △  |   2순위  |   준현 |
 
 
 사용한 Extension
