--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -4,10 +4,10 @@ title: "Flood_iOS"
 tags: tag1
 ---
 
-# :ocean: Flood
+# 🌊 Flood
 
 기능설명
----------------
+------------
 <h3>정보를 공유하는 가장 쉬운 방법
 
 기업에서 어떤 정보들을 공유하는지 알고 싶지 않나요?
@@ -15,12 +15,12 @@ tags: tag1
 
 
 서비스 work flow
----------------
+------------
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/workflow.png?raw=true" width= "800">
 
 앱 아이콘
 ------------
-![Floodicon](https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/Flood.png?raw=true)
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/Flood.png?raw=true" width= "500">
 
 스크린 샷
 ------------
@@ -46,12 +46,9 @@ tags: tag1
 > * Kingfisher 4.10.1
 > * SwiftyGif
 
-> * ~~Tagging~~ 
-> * ~~FMPhotoPicker 0.8~~
-
 기능 소개
 ------------
-| 기능</center> | 개발 여부</center> |  기타 사항  | 담당  |
+| 기능 | 개발 여부 |  기타 사항  | 담당  |
 |:--------:|:--------:|:--------:|:--------:|
 |   로그인/회원가입  | x  |   2순위 |   - |
 |   뉴스피드  | ○  |   1순위  |   현지 |
