--- a/_posts/2020-01-04-NUTEE-iOS.md
+++ b/_posts/2020-01-04-NUTEE-iOS.md
@@ -14,21 +14,21 @@ tags: tag1 2020
 
 
 
-앱 아이콘
-------------
+### 앱 아이콘
+
 
 <img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/NUTEE.png?raw=true" width="300">
 
 
 
-스크린 샷
-------------
+### 스크린 샷
+
 <img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/1.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/2.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/3.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/4.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/5.jpg?raw=true" width="300"><img src="https://github.com/team-nutee/NUTEE-iOS/blob/develop/IMG/6.jpg?raw=true" width="300">
 
 
 
-개발 환경
-------------
+### 개발 환경
+
 1. Swift 버전
 - 5
 
@@ -49,8 +49,8 @@ tags: tag1 2020
 
 
 
-사용한 Extension
-------------
+### 사용한 Extension
+
 
 | Extension        | 사용 이유                                |
 | ---------------- | ---------------------------------------- |
@@ -68,8 +68,7 @@ tags: tag1 2020
 
 
 
-팀원 소개
-------------
+### 팀원 소개
 
 * 오준현 
 
