--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -1,30 +1,30 @@
 ---
 layout: default
 title: "Flood_iOS"
-tags: tag1
+tags: 2019 Project iOS
 ---
 
 # 🌊 Flood
 
-기능설명
-------------
+### 기능설명
+
 <h3>정보를 공유하는 가장 쉬운 방법
 
 기업에서 어떤 정보들을 공유하는지 알고 싶지 않나요?
 플러드는 기업에서 어떤 정보들을 공유하는지 시각화된 자료로 여러분께 보여드립니다.
 
 
-서비스 work flow
-------------
+### 서비스 work flow
+
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/workflow.png?raw=true" width= "800">
 
-앱 아이콘
-------------
+### 앱 아이콘
+
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/Flood.png?raw=true" width= "500">
 
 
-스크린 샷
-------------
+### 스크린 샷
+
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/splash.png?raw=true" width="300">
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/splash2.png?raw=true" width="300">
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed.png?raw=true" width="300">
@@ -36,8 +36,8 @@ tags: tag1
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postSetting.png?raw=true" width="300">
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postCategory.png?raw=true" width="300">
 
-개발 환경
-------------
+### 개발 환경
+
 1. Swift 버전
 > * 5.1.3
 2. Xcode 버전
@@ -47,8 +47,8 @@ tags: tag1
 > * Kingfisher 4.10.1
 > * SwiftyGif
 
-기능 소개
-------------
+### 기능 소개
+
 | 기능 | 개발 여부 |  기타 사항  | 담당  |
 |:--------:|:--------:|:--------:|:--------:|
 |   로그인/회원가입  | x  |   2순위 |   - |
@@ -61,8 +61,8 @@ tags: tag1
 |   마이페이지  | △  |   2순위  |   준현 |
 
 
-사용한 Extension
-------------
+### 사용한 Extension
+
 > * CALayer : 각종 view의 세부적인 border 설정
 > * CGFloat :
 > * UIButton : button border, shadow
@@ -74,8 +74,8 @@ tags: tag1
 > * UIViewcontroller : alertcontroller 
 
 
-문제점과 해결 방법 report
-------------
+### 문제점과 해결 방법 report
+
 * **문제1**
  url을 서버로 넘겨줄때 http://~~ 로 확인을 해주고 넘겨줘야 한다는 문제가 발생함
  위와 같은 문제로 인해 
@@ -115,8 +115,7 @@ tags: tag1
 height를 정할때 키보드의 높이에서 탭바의 높이만큼 뺀 후 넘겨주어 해결
  
 
-팀원 소개
-------------
+### 팀원 소개
 
 * 유현지
 > SOPT 25기 iOS 파트원으로  ‘Flood’라는 서비스에 참여하게 되었습니다. 
