--- a/_posts/2020-06-04-BangMoon.md
+++ b/_posts/2020-06-04-BangMoon.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "방문_iOS"
-tags: 2020 Project iOS
+tags: 2020 project iOS
 ---
 
 <img src=https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/logo.png>
