--- a/_posts/2020-06-04-BangMoon.md
+++ b/_posts/2020-06-04-BangMoon.md
@@ -27,20 +27,20 @@ tags: 2020 project iOS
 개발 환경
 ------------
 1. Swift 버전
-> * 5
+   5
 2. Xcode 버전
-> * 11.5
+   11.5
 3. 사용한 라이브러리
-> * Alamofire 4.8.2
-> * Kingfisher
-> * SnapKit
+   Alamofire 4.8.2
+   Kingfisher
+   SnapKit
 
 사용한 Extension
 ------------
-> * UIColor : 각종 색 주입, hex로 조절
-> * UIImageView : Kingfisher 사용
-> * UIView : superview에 맞는 autolayout , rounding, border
-> * UIViewcontroller : alertcontroller 
+   UIColor : 각종 색 주입, hex로 조절
+   UIImageView : Kingfisher 사용
+   UIView : superview에 맞는 autolayout , rounding, border
+   UIViewcontroller : alertcontroller 
 
 ## iOS 뷰
 <img src=https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view1.png >
