--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -6,7 +6,7 @@ tags: 2019 project iOS
 
 # 🌊 Flood
 
-### 기능설명
+## 기능설명
 
 <h3>정보를 공유하는 가장 쉬운 방법
 
@@ -14,38 +14,33 @@ tags: 2019 project iOS
 플러드는 기업에서 어떤 정보들을 공유하는지 시각화된 자료로 여러분께 보여드립니다.
 
 
-### 서비스 work flow
+## 서비스 work flow
 
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/workflow.png?raw=true" width= "800">
 
-### 앱 아이콘
+## 앱 아이콘
 
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/Flood.png?raw=true" width= "500">
 
 
-### 스크린 샷
+## 스크린 샷
 
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/splash.png?raw=true" width="300">
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/splash2.png?raw=true" width="300">
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed.png?raw=true" width="300">
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed2.png?raw=true" width="300"> 
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/feed3.png?raw=true" width="300"> 
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/mypage.png?raw=true" width="300"> 
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/mypage2.png?raw=true" width="300"> 
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postView.png?raw=true" width="300">
-<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postSetting.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/newsFeed.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/newsFeedFlip.png?raw=true" width="300">
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postCategory.png?raw=true" width="300">
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postSetting.png?raw=true" width="300"> 
+<img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postView.png?raw=true" width="300"> 
 
 ### 개발 환경
 
 1. Swift 버전
-> * 5.1.3
+   5.1.3
 2. Xcode 버전
-> * 11.3
+   11.3
 3. 사용한 라이브러리
-> * Alamofire 4.8.2
-> * Kingfisher 4.10.1
-> * SwiftyGif
+   Alamofire 4.8.2
+   Kingfisher 4.10.1
+   SwiftyGif
 
 ### 기능 소개
 
@@ -63,15 +58,15 @@ tags: 2019 project iOS
 
 ### 사용한 Extension
 
-> * CALayer : 각종 view의 세부적인 border 설정
-> * CGFloat :
-> * UIButton : button border, shadow
-> * UIColor : 각종 색 주입, hex로 조절
-> * UIImage : image 투명도 조절
-> * UIImageView : Kingfisher 사용
-> * UITextView : textview의 placeholder추가, textview의 동적인 움직임 
-> * UIView : superview에 맞는 autolayout , rounding, border
-> * UIViewcontroller : alertcontroller 
+CALayer : 각종 view의 세부적인 border 설정
+CGFloat :
+UIButton : button border, shadow
+   UIColor : 각종 색 주입, hex로 조절
+   UIImage : image 투명도 조절
+   UIImageView : Kingfisher 사용
+   UITextView : textview의 placeholder추가, textview의 동적인 움직임 
+   UIView : superview에 맞는 autolayout , rounding, border
+   UIViewcontroller : alertcontroller 
 
 
 ### 문제점과 해결 방법 report
