--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "Flood_iOS"
-tags: 2019 project iOS
+tags: 2019y project iOS
 ---
 
 # 🌊 Flood
@@ -58,18 +58,19 @@ tags: 2019 project iOS
 
 ### 사용한 Extension
 
-CALayer : 각종 view의 세부적인 border 설정
-CGFloat :
-UIButton : button border, shadow
-   UIColor : 각종 색 주입, hex로 조절
-   UIImage : image 투명도 조절
-   UIImageView : Kingfisher 사용
-   UITextView : textview의 placeholder추가, textview의 동적인 움직임 
-   UIView : superview에 맞는 autolayout , rounding, border
-   UIViewcontroller : alertcontroller 
+<br/>CALayer : 각종 view의 세부적인 border 설정
+<br/>CGFloat :
+<br/>UIButton : button border, shadow
+<br/>UIColor : 각종 색 주입, hex로 조절
+<br/>UIImage : image 투명도 조절
+<br/>UIImageView : Kingfisher 사용
+<br/>UITextView : textview의 placeholder추가, textview의 동적인 움직임 
+<br/>UIView : superview에 맞는 autolayout , rounding, border
+<br/>UIViewcontroller : alertcontroller 
 
 
-### 문제점과 해결 방법 report
+## 문제점과 해결 방법 report
+<br/>
 
 * **문제1**
  url을 서버로 넘겨줄때 http://~~ 로 확인을 해주고 넘겨줘야 한다는 문제가 발생함
