--- a/_posts/2020-06-04-BangMoon.md
+++ b/_posts/2020-06-04-BangMoon.md
@@ -45,9 +45,9 @@ tags: 2020y project iOS
    UIViewcontroller : alertcontroller 
 
 ## iOS 뷰
-<img src=https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view1.png >
-<img src=https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view2.png >
-<img src=https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view3.png >
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view1.png" >
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view2.png" >
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view3.png" >
 
 
 
