--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -45,7 +45,7 @@ tags: 2019y project iOS
 ### 기능 소개
 
 | 기능 | 개발 여부 |  기타 사항  | 담당  |
-|:--------:|:--------:|:--------:|:--------:|
+|--------|--------|--------|--------|
 |   로그인/회원가입  | x  |   2순위 |   - |
 |   뉴스피드  | ○  |   1순위  |   현지 |
 |   뉴스피드 세부 뷰  | △  |   1순위  |   현지 |
@@ -55,6 +55,7 @@ tags: 2019y project iOS
 |   알림  | x  |   3순위  |   - |
 |   마이페이지  | △  |   2순위  |   준현 |
 
+<br/>
 
 ### 사용한 Extension
 
@@ -100,24 +101,25 @@ tags: 2019y project iOS
 * **문제2**
  키보드동작 시킬 때 탭바뷰컨트롤러가 함께 있는 경우, 탭바의 높이 만큼 키보드와 텍스트필드 사이에 간격이 생김
 
-```swift
+~~~swift
   @objc func keyboardWillShow(_ notificatoin: Notification) {
     let duration = notificatoin.userInfo?[UIResponder.keyboardAnimationDurationUserInfoKey] as! Double
     let curve = notificatoin.userInfo?[UIResponder.keyboardAnimationCurveUserInfoKey] as! UInt
     let keyboardSize = (notificatoin.userInfo?[UIResponder.keyboardFrameEndUserInfoKey] as! NSValue).cgRectValue
     let height = keyboardSize.height - (self.tabBarController?.tabBar.frame.size.height ?? 0.0)
-```
-
+~~~
+<br>
 height를 정할때 키보드의 높이에서 탭바의 높이만큼 뺀 후 넘겨주어 해결
  
 
 ### 팀원 소개
+<br/>
 
 * 유현지
-> SOPT 25기 iOS 파트원으로  ‘Flood’라는 서비스에 참여하게 되었습니다. 
-> 저는 메인파트인 뉴스피드를 맡아 개발하고있으며 일주일 정도 남은 기간동안 더 발전할 수 있도록 열심히 하겠습니다!
+<br> SOPT 25기 iOS 파트원으로  ‘Flood’라는 서비스에 참여하게 되었습니다. 
+<br> 저는 메인파트인 뉴스피드를 맡아 개발하고있으며 일주일 정도 남은 기간동안 더 발전할 수 있도록 열심히 하겠습니다!
 
 * 오준현
-> SOPT 25기 iOS YB 이번 앱잼에서 리드 개발자로 참여하고 있습니다!! 
-> 이번 앱잼 즐기면서 최대한의 성과를 내기위해서 노력하고 있습니다!!
-> 앱잼이후에도 플러드 다같이 오래오래 갔으면 좋겠어요!!!
+<br> SOPT 25기 iOS YB 이번 앱잼에서 리드 개발자로 참여하고 있습니다!! 
+<br> 이번 앱잼 즐기면서 최대한의 성과를 내기위해서 노력하고 있습니다!!
+<br> 앱잼이후에도 플러드 다같이 오래오래 갔으면 좋겠어요!!!
