--- a/_posts/2020-06-04-BangMoon.md
+++ b/_posts/2020-06-04-BangMoon.md
@@ -7,7 +7,7 @@ tags: 2020y project iOS
 
 ### 구석 문화생활, 방문 / 관람자가 언더 공연에 펀딩하고 공연 영상을 소비할 수 있는 서비스
 
-<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/logo?raw=true">
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/logo?raw=true" width=300>
 
 
 **[API docs- git wiki](https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/wiki)**
@@ -45,9 +45,9 @@ tags: 2020y project iOS
    UIViewcontroller : alertcontroller 
 
 ## iOS 뷰
-<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view1.png?raw=true" >
-<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view2.png?raw=true" >
-<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view3.png?raw=true" >
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view1.png?raw=true" width=300>
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view2.png?raw=true" width=300>
+<img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view3.png?raw=true" width=300>
 
 
 
