--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -6,6 +6,8 @@ tags: 2019y project iOS
 
 # 🌊 Flood
 
+<br/>
+
 ## 기능설명
 
 <h3>정보를 공유하는 가장 쉬운 방법
@@ -13,15 +15,18 @@ tags: 2019y project iOS
 기업에서 어떤 정보들을 공유하는지 알고 싶지 않나요?
 플러드는 기업에서 어떤 정보들을 공유하는지 시각화된 자료로 여러분께 보여드립니다.
 
+<br/>
 
 ## 서비스 work flow
 
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/workflow.png?raw=true" width= "800">
+<br/>
 
 ## 앱 아이콘
 
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/Flood.png?raw=true" width= "500">
 
+<br/>
 
 ## 스크린 샷
 
@@ -30,6 +35,8 @@ tags: 2019y project iOS
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postCategory.png?raw=true" width="300">
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postSetting.png?raw=true" width="300"> 
 <img src="https://github.com/Flood-SOPT25th/Flood_iOS/blob/master/IMG/postView.png?raw=true" width="300"> 
+
+<br/>
 
 ### 개발 환경
 
@@ -69,6 +76,7 @@ tags: 2019y project iOS
 <br/>UIView : superview에 맞는 autolayout , rounding, border
 <br/>UIViewcontroller : alertcontroller 
 
+<br/>
 
 ## 문제점과 해결 방법 report
 <br/>
@@ -97,6 +105,7 @@ tags: 2019y project iOS
         return predicate.evaluate(with: self.urlTextField.text!)
     }
 ```
+<br/>
 
 * **문제2**
  키보드동작 시킬 때 탭바뷰컨트롤러가 함께 있는 경우, 탭바의 높이 만큼 키보드와 텍스트필드 사이에 간격이 생김
@@ -111,15 +120,16 @@ tags: 2019y project iOS
 <br>
 height를 정할때 키보드의 높이에서 탭바의 높이만큼 뺀 후 넘겨주어 해결
  
+<br/>
 
 ### 팀원 소개
 <br/>
 
-* 유현지
+- 유현지
 <br> SOPT 25기 iOS 파트원으로  ‘Flood’라는 서비스에 참여하게 되었습니다. 
 <br> 저는 메인파트인 뉴스피드를 맡아 개발하고있으며 일주일 정도 남은 기간동안 더 발전할 수 있도록 열심히 하겠습니다!
 
-* 오준현
+- 오준현
 <br> SOPT 25기 iOS YB 이번 앱잼에서 리드 개발자로 참여하고 있습니다!! 
 <br> 이번 앱잼 즐기면서 최대한의 성과를 내기위해서 노력하고 있습니다!!
 <br> 앱잼이후에도 플러드 다같이 오래오래 갔으면 좋겠어요!!!
