--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -67,30 +67,30 @@ tags: 2019y project iOS
 ### 기능 소개
 <br/>
 
-| 기능 | 개발 여부 |  기타 사항  | 담당  |
-| -------------------- | ------------------------ | -------------------- | -------------------------------- |
-|   로그인/회원가입  | x  |   2순위 |   - |
-|   뉴스피드  | ○  |   1순위  |   현지 |
-|   뉴스피드 세부 뷰  | △  |   1순위  |   현지 |
-|   뉴스피드 카테고리 분류  | △  |   1순위  |   현지 |
-|   기업정보  | x  |   2순위  |   - |
-|   게시글 작성  | ○  |   1순위  |   준현 |
-|   알림  | x  |   3순위  |   - |
-|   마이페이지  | △  |   2순위  |   준현 |
+| 기능 | 담당  |
+| -------------------- | ----------------------- |
+|   로그인/회원가입  |    - |
+|   뉴스피드  |    현지 |
+|   뉴스피드 세부 뷰  |    현지 |
+|   뉴스피드 카테고리 분류  |   현지 |
+|   기업정보    |   - |
+|   게시글 작성   |   준현 |
+|   알림   |   - |
+|   마이페이지    |   준현 |
 
 <br/>
 
 ### 사용한 Extension
 
-<br/>CALayer : 각종 view의 세부적인 border 설정
-<br/>CGFloat :
-<br/>UIButton : button border, shadow
-<br/>UIColor : 각종 색 주입, hex로 조절
-<br/>UIImage : image 투명도 조절
-<br/>UIImageView : Kingfisher 사용
-<br/>UITextView : textview의 placeholder추가, textview의 동적인 움직임 
-<br/>UIView : superview에 맞는 autolayout , rounding, border
-<br/>UIViewcontroller : alertcontroller 
+- CALayer : 각종 view의 세부적인 border 설정
+- CGFloat :
+- UIButton : button border, shadow
+- UIColor : 각종 색 주입, hex로 조절
+- UIImage : image 투명도 조절
+- UIImageView : Kingfisher 사용
+- UITextView : textview의 placeholder추가, textview의 동적인 움직임 
+- UIView : superview에 맞는 autolayout , rounding, border
+- UIViewcontroller : alertcontroller 
 
 <br/>
 
