--- a/_posts/2020-06-04-BangMoon.md
+++ b/_posts/2020-06-04-BangMoon.md
@@ -39,10 +39,10 @@ tags: 2020y project iOS
 
 사용한 Extension
 ------------
-   UIColor : 각종 색 주입, hex로 조절
-   UIImageView : Kingfisher 사용
-   UIView : superview에 맞는 autolayout , rounding, border
-   UIViewcontroller : alertcontroller 
+- UIColor : 각종 색 주입, hex로 조절
+- UIImageView : Kingfisher 사용
+- UIView : superview에 맞는 autolayout , rounding, border
+- UIViewcontroller : alertcontroller 
 
 ## iOS 뷰
 <img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/view1.png?raw=true" width="300">
