--- a/_posts/2020-02-01-Git_Study.md
+++ b/_posts/2020-02-01-Git_Study.md
@@ -4,7 +4,10 @@ title: "Git Study"
 tags: 2020y Study
 ---
 
-# Github Cookbook 🍽 <img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" width="200" align=right>
+# Github Cookbook 🍽
+
+<img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" width="200">
+
 개발자로서 아직 다뤄보지 못한 Github의 기능들을 배워보기 위한 스터디입니다.
 
 ## Goal 🌟
