--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -105,8 +105,11 @@ tags: 2019y project iOS
  2. 클라이언트 부분에서 url을 체크한 후에 넘겨주는 방법
  
  두가지가 있었다
- 1번 해결 방법의 경우에는 따로 target을 만들어주고 2주라는 앱잼 기간 안에 새로운 기능을 습득한 이후 적용을 하기에 부담을 느끼게 되어
- 2번 해결 방법으로 넘어가 아래와 같은 정규표현식 코드로 http://~~ 와 https://~~ 인경우 http, https가 없는 경우, url이 아닌경우 3가지로 나누어 분기처리를 해 넘겨주는 방식을 채택 하였다.
+ 1. 1번 해결 방법의 경우에는 따로 target을 만들어주고 2주라는 앱잼 기간 안에 새로운 기능을 습득한 이후 적용을 하기에 부담을 느끼게 되어
+ 2. 2번 해결 방법으로 넘어가 아래와 같은 정규표현식 코드로 http://~~ 와 https://~~ 인경우 http, https가 없는 경우, url이 아닌경우 3가지로 나누어 분기처리를 해 넘겨주는 방식을 채택 하였다.
+
+ <br/>
+
  ```swift
     // URL 확인 정규표현식
     func canOpenURLHTTP(string: String?) -> Bool {
@@ -124,7 +127,9 @@ tags: 2019y project iOS
 <br/>
 
 * **문제2**
- 키보드동작 시킬 때 탭바뷰컨트롤러가 함께 있는 경우, 탭바의 높이 만큼 키보드와 텍스트필드 사이에 간격이 생김
+
+키보드동작 시킬 때 탭바뷰컨트롤러가 함께 있는 경우, 탭바의 높이 만큼 키보드와 텍스트필드 사이에 간격이 생김
+<br/>
 
 ~~~swift
   @objc func keyboardWillShow(_ notificatoin: Notification) {
