--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -138,7 +138,8 @@ tags: 2019y project iOS
     let keyboardSize = (notificatoin.userInfo?[UIResponder.keyboardFrameEndUserInfoKey] as! NSValue).cgRectValue
     let height = keyboardSize.height - (self.tabBarController?.tabBar.frame.size.height ?? 0.0)
 ~~~
-<br>
+
+<br/>
 height를 정할때 키보드의 높이에서 탭바의 높이만큼 뺀 후 넘겨주어 해결
  
 <br/>
@@ -147,10 +148,10 @@ height를 정할때 키보드의 높이에서 탭바의 높이만큼 뺀 후 넘
 <br/>
 
 - 유현지
-<br> SOPT 25기 iOS 파트원으로  ‘Flood’라는 서비스에 참여하게 되었습니다. 
-<br> 저는 메인파트인 뉴스피드를 맡아 개발하고있으며 일주일 정도 남은 기간동안 더 발전할 수 있도록 열심히 하겠습니다!
-
+<br/> SOPT 25기 iOS 파트원으로  ‘Flood’라는 서비스에 참여하게 되었습니다. 
+<br/> 저는 메인파트인 뉴스피드를 맡아 개발하고있으며 일주일 정도 남은 기간동안 더 발전할 수 있도록 열심히 하겠습니다!
+<br/>
 - 오준현
-<br> SOPT 25기 iOS YB 이번 앱잼에서 리드 개발자로 참여하고 있습니다!! 
-<br> 이번 앱잼 즐기면서 최대한의 성과를 내기위해서 노력하고 있습니다!!
-<br> 앱잼이후에도 플러드 다같이 오래오래 갔으면 좋겠어요!!!
+<br/> SOPT 25기 iOS YB 이번 앱잼에서 리드 개발자로 참여하고 있습니다!! 
+<br/> 이번 앱잼 즐기면서 최대한의 성과를 내기위해서 노력하고 있습니다!!
+<br/> 앱잼이후에도 플러드 다같이 오래오래 갔으면 좋겠어요!!!
