--- a/_posts/2019-12-21-Flood_iOS.md
+++ b/_posts/2019-12-21-Flood_iOS.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Flood_iOS"
+title: "Flood"
 tags: 2019y project iOS
 ---
 
@@ -142,6 +142,8 @@ tags: 2019y project iOS
 <br/>
 height를 정할때 키보드의 높이에서 탭바의 높이만큼 뺀 후 넘겨주어 해결
  
+<br/>
+<br/>
 <br/>
 
 ### 팀원 소개
