--- a/_posts/2020-06-04-BangMoon.md
+++ b/_posts/2020-06-04-BangMoon.md
@@ -6,7 +6,7 @@ tags: 2020y project iOS
 
 <img src="https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/blob/master/README_RES/logo.png?raw=true" width= "300">
 
-### 구석 문화생활, 방문 / 관람자가 언더 공연에 펀딩하고 공연 영상을 소비할 수 있는 서비스
+### 구석 문화생활, [방문](https://github.com/Soptkathon-26th-bangmoon/iOS) / 관람자가 언더 공연에 펀딩하고 공연 영상을 소비할 수 있는 서비스
 
 
 **[API docs- git wiki](https://github.com/Soptkathon-26th-bangmoon/BangMoon-Server/wiki)**
