--- a/_posts/2020-02-01-Git_Study.md
+++ b/_posts/2020-02-01-Git_Study.md
@@ -4,7 +4,7 @@ title: "Git Study"
 tags: 2020y study
 ---
 
-# Github Cookbook 🍽
+# [Github Cookbook 🍽](https://github.com/5anniversary/Github-Cookbook)
 
 <img src="https://github.githubassets.com/images/modules/logos_page/Octocat.png" width="200">
 
